<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:keepScreenOn="true">

    <FrameLayout
        android:id="@+id/preview_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="246dp"
            android:layout_height="246dp"
            >

        </androidx.camera.view.PreviewView>
    </FrameLayout>

    <ScrollView
        android:id="@+id/container_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_frame">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textViewPitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis_indicator"
                app:layout_constraintBottom_toTopOf="@id/textViewYaw"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/textViewYaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_axis_indicator"
                app:layout_constraintBottom_toTopOf="@id/textViewRoll"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/textViewRoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_axis_indicator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewYaw" />

            <TextView
                android:id="@+id/textViewNumbFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_axis_indicator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewRoll" />

            <TextView
                android:id="@+id/pitch_axis_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_display_not_tracking"
                app:layout_constraintBottom_toTopOf="@+id/yaw_axis_display"
                app:layout_constraintLeft_toRightOf="@id/textViewPitch" />

            <TextView
                android:id="@+id/yaw_axis_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_display_not_tracking"
                app:layout_constraintBottom_toTopOf="@+id/roll_axis_display"
                app:layout_constraintLeft_toRightOf="@id/textViewYaw" />

            <TextView
                android:id="@+id/roll_axis_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/text_display_not_tracking"
                app:layout_constraintLeft_toRightOf="@id/textViewRoll"
                app:layout_constraintTop_toBottomOf="@id/yaw_axis_display"
                tools:layout_editor_absoluteY="348dp" />

            <TextView
                android:id="@+id/number_of_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/numOfFace"
                app:layout_constraintLeft_toRightOf="@id/textViewNumbFace"
                app:layout_constraintTop_toBottomOf="@id/roll_axis_display"
                tools:layout_editor_absoluteY="348dp" />

            <Button
                android:id="@+id/toggleTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="trackingToggle"
                android:text="@string/button_tracking_1stRun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/constraint2"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="309dp" />

            <EditText
                android:id="@+id/txtAddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="192.168.1.34"
                app:layout_constraintRight_toRightOf="@id/constraint2"
                app:layout_constraintTop_toBottomOf="@id/toggleTrack" />

            <EditText
                android:id="@+id/txtPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="4242"
                app:layout_constraintRight_toRightOf="@id/constraint2"
                app:layout_constraintTop_toBottomOf="@id/txtAddr" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>